# radarr-mcp

./: .env  .env.example  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  radarr-mcp-server.py
