[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "radarr-mcp-server"
version = "1.0.0"
description = "Model Context Protocol server for Radarr movie management"
authors = [
    {name = "MCP Community"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastmcp>=0.2.0",
    "aiohttp>=3.8.0",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "mypy>=1.0.0"
]

[project.urls]
Homepage = "https://github.com/your-org/radarr-mcp-server"
Repository = "https://github.com/your-org/radarr-mcp-server"

[tool.black]
line-length = 120
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 